--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body, button, input {
+  font-size: 16px;
+}
+
 .hidden {
   display: none;
 }
@@ -10,7 +14,6 @@
   display: inline-block;
   padding: 4px 9px 6px 9px;
   margin: 3px 5px 3px 5px;
-  font-size: 14px;
   line-height: 18px;
   text-align: center;
   vertical-align: middle;
